<resources>
    <string name="app_name">轻go</string>

    <!--    底部导航-->
    <string name="main_home">首页</string>
    <string name="main_classify">分类</string>
    <string name="main_cart">购物车</string>
    <string name="main_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    登录-->
    <string name="login_hint_input_email">请输入邮箱地址</string>
    <string name="login_hint_input_verification_code">请输入验证码</string>
    <string name="login_hint_get_verification_code">获取验证码</string>
    <string name="login_support_country_phone">目前仅支持中国大陆</string>
    <string name="login_hint_input_account">请输入用户账号</string>
    <string name="login_hint_input_password">请输入密码</string>
    <string name="login_checkbox_text">登录即代表您已同意</string>
    <string name="login_privacy_policy">轻go隐私政策</string>
    <string name="login_text">登录</string>
    <string name="login_text_phone">短信验证码登录</string>
    <string name="login_text_account">账号密码登录</string>
    <string name="login_register">新用户注册</string>
    <string name="login_forget_psw">忘记密码</string>
    <string name="login_account_psw_null">邮箱或密码为空，请重试！</string>
    <string name="login_email_code_null">邮箱或验证码为空，请重试！</string>
    <string name="login_phone_error">请输入正确的邮箱地址！</string>
    <string name="login_regain_code">重新获取</string>
    <string name="login_regain_code_after">后重新获取</string>
    <string name="login_register_user_service_agreement">轻go用户服务协议</string>
    <string name="login_register_next">下一步</string>
    <string name="login_register_write_password">密码</string>
    <string name="login_register_password_tip">请输入密码:</string>
    <string name="login_register_password_tip1">请再次输入密码:</string>
    <string name="login_register_btn">注册</string>
    <string name="login_password_check">请输入8—15位密码！</string>
    <string name="login_password_Inconsistent">密码不一致，请重新输入！</string>


<!--    个人中心-->
    <string name="text_integration">积分</string>
    <string name="text_growth">成长值</string>
    <string name="text_historyIntegration">历史积分数量</string>
    <string name="text_evaluate">评价</string>
    <string name="text_collect_commodity">商品收藏</string>
    <string name="text_collect_shop">店铺收藏</string>
    <string name="text_discount_card">我的优惠卷</string>
    <string name="text_order_from">我的订单</string>
    <string name="text_order_from_all">查看全部</string>
    <string name="text_payment">待付款</string>
    <string name="text_deliver_goods">待发货</string>
    <string name="text_after_sale">退款/售后</string>
    <string name="text_receipt">待收货</string>
    <string name="text_record">浏览记录</string>
    <string name="text_shop">店铺收藏</string>
                <!--设置-->
    <string name="text_set">设置</string>
    <string name="set_text_receipt">我的收货地址</string>
    <string name="set_text_account_safe">账号与安全</string>
    <string name="set_text_privacy">隐私政策</string>
    <string name="set_text_general">通用</string>
    <string name="set_text_help">帮助与反馈</string>
    <string name="set_text_about">关于轻go</string>
    <string name="set_text_exit">退出登录</string>
                            <!--个人信息-->
    <string name="set_personal_info">个人信息</string>
    <string name="set_personal_edit">编辑</string>
    <string name="set_personal_changed_img">更换头像</string>
    <string name="set_personal_change_img_select">请选择获取头像方式</string>
    <string name="set_personal_change_img_select_take_photograph">拍照</string>
    <string name="set_personal_change_img_select_photo_album">从相册中选取</string>
    <string name="set_personal_change_img_select_cancel">取消</string>
    <string name="set_personal_account">轻go账号</string>
    <string name="set_personal_name">轻go昵称</string>
    <string name="set_personal_sex">性别</string>
    <string name="set_personal_personalized_signature">个人签名</string>
    <string name="set_personal_sex_man">男</string>
    <string name="set_personal_sex_woman">女</string>
    <string name="set_personal_ok">确定</string>
                            <!--我的收货地址-->
    <string name="set_personal_receipt">我的收货地址</string>
    <string name="set_personal_receipt_add">添加收货地址</string>
    <string name="set_personal_receipt_add_name">收货人</string>
    <string name="set_personal_receipt_add_number">手机号码</string>
    <string name="set_personal_receipt_add_address">详细地址</string>
    <string name="set_personal_receipt_add_save">保存</string>
    <string name="set_personal_receipt_add_name_tip">名字</string>
    <string name="set_personal_receipt_add_number_tip">手机号</string>
    <string name="set_personal_receipt_add_address_tip">省、市、区、街道、小区楼栋</string>
                            <!--账户与安全-->
    <string name="set_personal_safe">账户与安全</string>
    <string name="set_personal_safe_name">会员名</string>
    <string name="set_personal_safe_phone">手机号</string>
    <string name="set_personal_safe_change_psw">修改登录密码</string>
    <string name="set_personal_safe_delete_account">注销账户</string>
    <string name="set_personal_safe_delete_account_tip">是否注销账户？</string>
    <string name="set_personal_safe_ok">确定</string>
    <string name="set_personal_safe_no">取消</string>
                                                <!--手机号-->
    <string name="set_personal_safe_phone1">手机号</string>
    <string name="set_personal_safe_phone1_tip_yes">当前绑定手机号</string>
    <string name="set_personal_safe_phone1_tip_no">当前未绑定手机号</string>
    <string name="set_personal_safe_phone1_change">修改手机号</string>
    <string name="set_personal_safe_phone1_add">添加手机号</string>
    <string name="set_personal_safe_phone1_return">返回</string>
    <string name="set_personal_safe_phone1_ok">确定</string>
    <string name="set_personal_safe_phone1_cancel">取消</string>
                                                <!--修改密码-->
    <string name="set_personal_safe_change_psw1">修改登录密码</string>
    <string name="set_personal_safe_change_psw1_old_psw">原密码</string>
    <string name="set_personal_safe_change_psw1_new_psw">新密码</string>

<!--    首页-->
    <string name="child_text_welfare">福利专区</string>
    <string name="child_text_welfare_tip">更多福利商品</string>
    <string name="child_text_spike">秒杀专区</string>
    <string name="child_text_spike_tip">更多秒杀商品</string>



<!--    商品信息-->
    <string name="commodity_text_title">商品详情</string>
    
    
    
    
    <string name="text_privacy">\n
    本应用尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。\n\n

适用范围
(a) 在您注册本应用帐号时，您根据本应用要求提供的个人注册信息；\n

(b) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；

(c) 本应用通过合法途径从商业伙伴处取得的用户个人数据。\n

您了解并同意，以下信息不适用本隐私权政策：\n

(a) 您在使用本应用平台提供的搜索服务时输入的关键字信息；\n

(b) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；\n

(c) 违反法律规定或违反本应用规则行为及本应用已对您采取的措施。\n\n

信息使用
(a)本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。\n

(b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。\n

(c) 为服务用户的目的，本应用可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与本应用合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。\n\n

信息披露在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：\n
(a) 经您事先同意，向第三方披露；\n

(b)为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；\n

(c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；\n

(d) 如您出现违反所在国家有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；\n

(e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；\n

(f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。\n

(g) 其它本应用根据法律、法规或者网站政策认为合适的披露。\n\n

信息存储和交换本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。

Cookie的使用\n

(a) 在您未拒绝接受cookies的情况下，本应用会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的本应用平台服务或功能。本应用使用cookies可为您提供更加周到的个性化服务，包括推广服务。\n

(b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的本应用网络服务或功能。\n

(c) 通过本应用所设cookies所取得的有关信息，将适用本政策。\n\n

信息安全\n
(a) 本应用帐号均有安全保护功能，请妥善保管您的用户名及密码信息。本应用将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。\n

(b) 在使用本应用网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易.\n\n

7.本隐私政策的更改\n

(a)如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。\n

(b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。\n

方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。</string>

</resources>
