<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/theme_min_gray"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_personal"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_head_portrait_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_personal_set"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/set"
            android:layout_gravity="right"
            android:layout_marginTop="35dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_head_portrait"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@mipmap/relaxgo_logo"/>

            <TextView
                android:id="@+id/tv_personal_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:layout_gravity="bottom"
            android:gravity="center">
            <TextView
                android:id="@+id/text_integration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/text_color"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/text_growth"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <TextView
                android:id="@+id/text_historyIntegration"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/personal_selector_item_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentStart="true"
                        android:text="@string/text_order_from"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_order_form_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toLeftOf="@+id/iv_right"
                        android:text="@string/text_order_from_all" />

                    <ImageView
                        android:id="@+id/iv_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@mipmap/icon_right" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/ll_payment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/personal_icon_payment"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_payment"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_deliver_goods"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/personal_icon_deliver_goods"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_deliver_goods"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_receipt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/personal_icon_receipt"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_receipt"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_evaluate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/personal_icon_evaluate"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_evaluate"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_after_sale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/personal_icon_after_sale"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_after_sale"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <RelativeLayout
                android:id="@+id/rl_collect_commodity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/personal_selector_item_bg"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_collect_commodity"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/personal_icon_collect_commodity"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv_collect_commodity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/iv_collect_commodity"
                    android:text="@string/text_collect_commodity"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/iv_collect_commodity_right"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_collect_shop"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/personal_selector_item_bg"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_collect_shop"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/personal_icon_collect_shop"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv_collect_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/iv_collect_shop"
                    android:text="@string/text_collect_shop"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/iv_collect_shop_right"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_discount_card"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/personal_selector_item_bg"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_discount_card"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/personal_icon_discount_card"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv_discount_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/iv_discount_card"
                    android:text="@string/text_discount_card"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/iv_discount_card_right"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_record"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/personal_selector_item_bg"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_record"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/personal_icon_record"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/iv_record"
                    android:text="@string/text_record"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/iv_record_right"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_right" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:id="@+id/btn_toLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_text" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>